# TCP_Server-Client

./: .travis.yml  CMakeLists.txt
src/: TCP_Client.h  TCP_Clinet.cpp  main.cpp
src/Client/: TCP_Client.cpp  TCP_Client.h  TCP_Clinet.cpp  main.cpp
src/Server/: TCP_Server.cpp  TCP_Server.h  main.cpp
